# ai-pm

./: .env.example  .gitignore  CLAUDE.md  DUAL_DOCUMENT_MANAGEMENT_PLAN.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  demo.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: geisinger-sdk-integrator.md
backend/: README.md  config.py  main.py  test_api.py
backend/api/: models.py
backend/api/routes/: __init__.py  agent.py  documents.py  health.py
backend/api/services/: agent_service.py
backend/database/: __init__.py  document_store.py  schema.sql
backend/middleware/: error_handlers.py
backend/services/: __init__.py  document_processor.py  knowledge_extractor.py
config/: development.yaml
database/migrations/: 001_initial_schema.sql
database/seeds/: sample_initiatives.sql
docs/: PROJECT-INITIALIZATION-SUMMARY.md
docs/architecture/: DESIGN.md  geisinger-architecture-diagram.mermaid  geisinger-architecture-explanation.md  geisinger-module-design.md  geisinger-quick-reference.md  refined-hitl-interaction-architecture.md
docs/blueprints/: ai-discovery-form.yaml  ai-product-manager-strategy.yaml  discovery-workflow.yaml  meta-blueprint.yaml  product-mgmt-blueprint.yaml
examples/: README.md  basic_usage.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: agent.ts
frontend/src/components/: ChatInterface.tsx  DocumentUpload.tsx  MessageInput.tsx  MessageList.tsx  ModeSelector.tsx  ThinkingIndicator.tsx
frontend/src/components/documents/: BlueprintLibrary.tsx  DualDocumentUpload.tsx  index.ts
frontend/src/hooks/: useAgent.ts  useAgentStream.ts
frontend/src/styles/: global.css
frontend/src/types/: agent.ts
output/: discovery_form_process_ticket_1760064203.255194.json
src/: main.py
src/agent/: conversational_agent.py  llm_interface.py  orchestrator.py  pm_agent.py  sdk_integration.py
src/knowledge/: blueprint_loader.py
src/tools/: __init__.py  azure_devops_client.py  base.py  sdk_tool_adapter.py  tool_registry.py  web_search_tool.py
tests/integration/: test_pm_agent_integration.py  test_sdk_integration.py
tests/unit/: test_pm_agent.py
tests/unit/test_tools/: test_azure_devops_client.py  test_web_search_tool.py
